<resources>
    <string name="app_name">Finlab</string>
    <string name="title_account">Accounts</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_budget">Budget</string>


    <string name="title_category">Category</string>

    <string name="demo_text">Some test</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
</resources>
